Skibidiweb skibidifinal ahorasi

--- a/src/hobbies/hobbies.html
+++ b/src/hobbies/hobbies.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/estilos/stylehobbies.css">
+    <link rel="stylesheet" href="estilos/stylehobbies.css">
     <title>Hobbies Naim</title>
 </head>
 <body>
     <div class="head">
         <div class="logo">
-            <a href="/src/index.html">NAIM</a>
+            <a href="index.html">NAIM</a>
         </div>
         <nav class="navbar">
-            <a href="/src/index.html"> Inicio</a>
-            <a href="/src/informacion/informacion.html"> Informacion</a>
-            <a href="/src/gustos/gustos.html"> Gustos</a>
-            <a href="/src/hobbies/hobbies.html"> Hobbies</a>
+            <a href="index.html"> Inicio</a>
+            <a href="informacion/informacion.html"> Informacion</a>
+            <a href="gustos/gustos.html"> Gustos</a>
+            <a href="hobbies/hobbies.html"> Hobbies</a>
         </nav>
     </div>
     <header class="content header">
