--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Naim Salta</title>
 </head>
 <body>
     <div class="head">
         <div class="logo">
-            <a href="/src/index.html">NAIM</a>
+            <a href="index.html">NAIM</a>
         </div>
         <nav class="navbar">
-            <a href="/src/index.html"> Inicio</a>
-            <a href="/src/informacion/informacion.html"> Informacion</a>
-            <a href="/src/gustos/gustos.html"> Gustos</a>
-            <a href="/src/hobbies/hobbies.html"> Hobbies</a>
+            <a href="index.html"> Inicio</a>
+            <a href="informacion/informacion.html"> Informacion</a>
+            <a href="gustos/gustos.html"> Gustos</a>
+            <a href="hobbies/hobbies.html"> Hobbies</a>
         </nav>
     </div>
 
@@ -28,7 +28,7 @@
         </p>
 
         <div class="button_informacion">
-            <a href="/src/informacion/informacion.html" class="button">Informacion General</a>
+            <a href="informacion/informacion.html" class="button">Informacion General</a>
         </div>
     </header>
 
@@ -44,21 +44,21 @@
                 <h3 class="cajas"> Gustos </h3>
                 <p class="cajas"> Descubre mis gustos </p>
                 <div class="button_informacion">
-                    <a href="/src/gustos/gustos.html" class="button"> Ver más </a>
+                    <a href="gustos/gustos.html" class="button"> Ver más </a>
                 </div>
             </div>
             <div class="box">
                 <h3 class="cajas">Hobbies</h3>
                 <p class="cajas">Descubre mis Hobbies</p>
                 <div class="button_informacion">
-                    <a href="/src/hobbies/hobbies.html" class="button">Ver más</a>
+                    <a href="hobbies/hobbies.html" class="button">Ver más</a>
                 </div>
             </div>
             <div class="box">
                 <h3 class="cajas">Amigos</h3>
                 <p class="cajas">Descubre a mis amigus</p>
                 <div class="button_informacion">
-                    <a href="/src/amigos/amigos.html" class="button">Ver más</a>
+                    <a href="amigos/amigos.html" class="button">Ver más</a>
                 </div>
             </div>
         </div>
